tests/fail/elaboration/numeric-literal/invalid.fathom
//~ exit-code = 1

0zzz : U32
